--- a/gb/24/11/26/n14379020.md
+++ b/gb/24/11/26/n14379020.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>多户住宅需求因房价飙升而增加</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/08/IMG_1126-600x400.jpg" />
-<h6>多户住宅可以指两个相邻的住宅单元，包括公寓房、分割的地块或在较大住宅地块上的附属居所。（简沐/大纪元）  
-</h6>
+<h6>多户住宅可以指两个相邻的住宅单元，包括公寓房、分割的地块或在较大住宅地块上的附属居所。（简沐/大纪元）  </h6>
 <hr>
 <p>【大纪元2024年12月01日讯】（大纪元记者朱丽娅悉尼编译报导）由于澳洲房价创下新高，预计多户住宅的需求将上升，到2027–28财年结束时，多户住宅的建设将为住房和建筑行业带来约572亿澳元的收入。</p>
 <p>据澳洲房地产投资网消息，根据Savills公司最新数据显示，越来越多的澳洲人选择共同分担房贷并同住在一个住宅中。</p>
@@ -20,39 +19,33 @@
 <p>缺乏隐私保护甚至会影响关系密切的家人，比如观看不同电视频道的问题。他补充说，“同样，考虑家人见面频率，是否需要一个较大的家庭用餐区域。”</p>
 <p>责任编辑：简玬</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/17/n14553188.md#1">新州洪水区房屋成交价仅347澳元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/16/n14552794.md#1">新州分契业主将迎来更公平、更明确的法规</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/16/n14552696.md#1">建筑成本加速上涨或推高通胀 推迟降息</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14551505.md#1">报告：布市建筑成本全澳最高 或推高房价</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14550859.md#1">大城市只有5个地区房租明显下降</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547209.md#1">全新平台FOUNDIT 助力更快更明智房产交易</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548426.md#1">澳洲大城市公寓租金几乎赶上独立屋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540685.md#1">昆州Noosa Heads 预计2032年前房价翻倍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14546901.md#1">阿德莱德房价涨速全澳最快 平价区渐成热点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540684.md#1">避免房产投资者代价高昂的十个陷阱</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/27/n9898377.md#1" target="_blank">折断的蝴蝶翅膀──慈禧御前女官舞蹈家裕容龄</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/5/n10279698.md#1" target="_blank">百岁老人：法轮功延长了我的寿命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/14/n9955432.md#1" target="_blank">文革中自杀的几个名人（3）红岩作者罗广斌</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/7/16/n8107028.md#1" target="_blank">澳洲出新书 探究法轮功健身奇效背后奥秘</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/2/n4608491.md#1">日本煎茶道始祖卖茶翁自许卢仝正流  还俗踏上卖茶修行之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542412.md#1">【古道人生】女子嫌贫悔婚 媒人自荐女儿代替后成一品夫人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14385712.md#1">【古道人生】盗贼刘雄飞知恩厚报</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548117.md#1">【未解之谜】语出惊人 算尽风云 民国第一神算传奇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14550235.md#1">【未解之谜】从沙漠烈焰到神秘圆洞：那些科学解不开的天坑之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/16/n14552990.md#1">【马克时空】面对俄军事压力 德国狂买数千战车</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/16/n14553017.md#1">【军事情报局】M1战车开火 美上将访台</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/16/n14552483.md#1">【直播】美众院听证会：人工智慧与犯罪利用</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14551354.md#1">肯德基推全新“回归计划”送免费炸鸡桶</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14551371.md#1">茅台1935价格跌破600元 较高位时暴跌69%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14551450.md#1">餐饮倒闭潮席卷香港 老字号扎堆停业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14552004.md#1">新庞德女郎 席德妮史威尼是最热门人选</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14552328.md#1">杨颖与爱马仕总监合照 8岁儿“小海绵”抢镜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14551497.md#1">耗资1亿 3天预售仅百万 陈佩斯《戏台》改档</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14551417.md#1">窦靖童首次主演剧集 与母亲王菲合唱主题曲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/13/n14550656.md#1">林俊杰自曝心脏出问题 每日需靠药物控制</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14551754.md#1">别在花园里放蛋壳 改用这招对植物更好</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14550829.md#1">为什么好人会比较快乐？ 专家释疑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548271.md#1">远离失智 这样做清除大脑微塑胶</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14552171.md#1">【厨娘香Q秀】芋泥蛋黄油葱鸡和蟹肉雨来菇炒蛋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14551574.md#1">美数十冰淇淋厂商：2028年前停用人工色素</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/23/n10079917.md#1">腊八的来源与风俗：吃了腊八饭就把年来办！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/19/n4461035.md#1">美人巨眼识穷途——读《虬髯客传》之红拂女(上)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/23/n4464215.md#1">闻道长安似弈棋——读《虬髯客传》之虬髯客(下)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686592.md#1">人物写实油画大赛入围作品欣赏——《深渊边缘》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/8/2/n3332566.md#1">守信重义 等到迟来的好姻缘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688442.md#1">【直播】诺姆部长就“旅行黄金时代”开记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688463.md#1">【军事情报局】打爆委国的F-35中队飞往中东</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688656.md#1">【时事金扫描】伊朗多地被炸 美以斩首开始？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687842.md#1">为何金价暴跌 创40年来最大单日跌幅</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687999.md#1">军方缺席中共政治局会议 专家析内讧后遗症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688147.md#1">中共吁官兵支持处理张又侠 被指证军心不稳</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688459.md#1">陆媒票选最有好感艺人 佘诗曼成唯一入榜港星</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687927.md#1">金钟国罕见公开爱妻身份 称一直把她当妹妹看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688468.md#1">李嘉明晒片酬 自曝发视频吐槽后收到剧组拖欠款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688492.md#1">港姐吴文忻乳癌复发 癌细胞扩散至一重要器官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687882.md#1">老婆是头号粉丝 玄彬主演《韩国制造》获狂赞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688718.md#1">这些行为看似无害 但会让旅馆员工恼火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685989.md#1">2026年不容错过的旅行目的地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687470.md#1">专家解析嫉妒损害伴侣关系的3种方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689115.md#1">为什么小狗需要尾巴？ 有何作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688143.md#1">【车评】展现超级四驱实力 2025 Mitsubishi Outlander SEL</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/26/n14379020.htm">多户住宅需求因房价飙升而增加</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/26/n14379020.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
